added nodes with correct text