@@ -26,6 +26,11 @@
     	<artifactId>javafx-controls</artifactId>
     	<version>15.0.1</version>
   	</dependency>
+  	<dependency>
+    	<groupId>org.openjfx</groupId>
+    	<artifactId>javafx-fxml</artifactId>
+    	<version>15.0.1</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -47,6 +52,10 @@
         	<artifactId>javafx-maven-plugin</artifactId>
         	<version>0.0.5</version>
         	<configuration>
+        		<options>
+        			<option>--add-exports</option>
+        			<option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
+        		</options>
             	<mainClass>de.getto.nicolas.App</mainClass>
         	</configuration>
     	</plugin>
